<resources>
    <string name="app_name">HealthReps</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_medicine_pick_list">MedicinePickList</string>

    //设置菜单
    <string name="myinfo">个人设置</string>
    <string name="mystore">专属药店</string>
    <string name="mydoctor">私人医生</string>
    <string name="mydevice">我的设备</string>
    <string name="addfriend">加好友</string>
    <string name="signout">注销登录</string>
    <string name="quit">退出</string>

    //登录界面
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="name_label">用户名：</string>
    <string name="pwd_label">密码：</string>
    <string name="exit">取消</string>
    <string name="oldPwd_label">原密码：</string>
    <string name="newPwd_label">新密码：</string>
    <string name="confirmPwd_label">确认密码：</string>
    <string name="btn_edit">修改</string>
    <string name="btn_cancel">取消</string>
    <string name="app_title">远程医疗客户端</string>
    <string name="register_title">远程医疗客户端用户注册</string>
    <string name="patient">患者</string>
    <string name="doctor">医生</string>
    <string name="pharmacist">药师</string>
    <string name="drug_administration">药监局</string>
    <string name="forget_password">忘记密码？</string>
    <string name="inputNameHnit">请输入登录帐号</string>
    <string name="inputPwdHnit">请输入登录密码</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>


    //定位相关
    <string name="locating">定位中</string>
    <string name="search">搜索</string>
    <string name="notfound">抱歉，未找到！</string>
    <string name="key_word">请输入关键字</string>
    <string name="locatez_as">定位为</string>
    <string name="switch_ornot">，是否切换？</string>
    <string name="city_show_text_hot">热门城市</string>
    <string name="city_hotcity_curlocationcity_text">定位城市</string>
    <string name="third_title_close">关闭</string>
    <string name="city_hotcity_searchedittext_hint">请输入城市名,首字母或拼音</string>
    <string name="xml_loading_01">加载中</string>

    <string name="cancel">取消</string>
    <string name="quit_dialog_cancel">取 消</string>
    <string name="assistant_upload_dialog_title">提示</string>


    <string name="no_data">没有找到符合条件的房源</string>
    <string name="title_activity_picture_select">Picture_select</string>
    <string name="title_activity_person_setting">PersonSetting</string>
    <string name="title_activity_person_store">PersonStore</string>

    <style name="mystyle" parent="android:Animation">
        <item name="@android:windowEnterAnimation">@anim/head_in</item>  //进入时的动画
        <item name="@android:windowExitAnimation">@anim/head_out</item>    //退出时的动画
    </style>
</resources>
